# AgenticRL-v1

./: .gitignore  README.md  main.py  pyproject.toml
agent/: base.py  build_agent.py  nodes.py  run.py  state.py
agent/tools/: tool_def.py  tool_func.py
data/: loader.py  room_tasks.jsonl  rooms.py
docs/notes/: dev_note_v0.MD  installation_notes.MD
scripts/vllm/: run_qwen3_8b.sh
tests/unit/: test_trainable_lit_agent.py
train/: rl_training_config.py  training_interface.py  training_test.py
