[project]
name = "agenticrl-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentlightning[verl]>=0.1.2",
    "bitsandbytes>=0.49.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "numpy<2.3",
    "vllm>=0.13.0",
]
