[project]
name = "agenticrl-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentlightning[verl]>=0.3.0",
    "flash-attn>=2.8.3",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "ninja>=1.13.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "torch<=2.7.1",
    "verl>=0.6.1",
    "vllm>=0.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
